# PySide6_book

./: .gitignore  README.md  dummy_script.py  get_last_python_file  lesson_10_1.py  lesson_10_2.py  lesson_10_3.py  lesson_10_4.py  lesson_11_1.py  lesson_11_2.py  lesson_11_3.py  lesson_11_4.py  lesson_12_1.py  lesson_12_2.py  lesson_12_3.py  lesson_12_4.py  lesson_12_5.py  lesson_12_6.py  lesson_12_7.py  lesson_12_8.py  lesson_1_1.py  lesson_1_2.py  lesson_1_3.py  lesson_1_4.py  lesson_2_1.py  lesson_2_10.py  lesson_2_2.py  lesson_2_3.py  lesson_2_4.py  lesson_2_5.py  lesson_2_6.py  lesson_2_7.py  lesson_2_8.py  lesson_2_9.py  lesson_3_1.py  lesson_3_2.py  lesson_3_3.py  lesson_3_4.py  lesson_3_5.py  lesson_3_6.py  (+30 more)
FirstGui/: FirstGui.pyproject  TodoModel.py  data.db  mainwindow.py  mainwindow.ui  rc_resources.py  resources.qrc  ui_mainwindow.py
clock/: main.py  main.qml
